메인화면만들기

--- a/clock.html
+++ b/clock.html
@@ -9,7 +9,8 @@
     <script defer src="./clock.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="gotoback" onclick="location.href='/'">뒤로가기</div>
+    <section class="container">
       <h2>What Time is it?</h2>
       <div class="button"></div>
       <div class="clock__analog__container">
@@ -18,6 +19,10 @@
         <div class="second"></div>
       </div>
       <div class="clock__digital__container"></div>
-    </div>
+    </section>
+    <section class="btns">
+      <button>analog</button>
+      <button>digital</button>
+    </section>
   </body>
 </html>
