메인화면 대충 꾸미기

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
   <body>
     <section>
       <h2>JS Practice!</h2>
-      <p>여기는 Js+Html+css를 연습하기 위한 공간입니다!</p>
-      <p>하나하나씩 추가할 예정이에요!</p>
-      <div class="btns">
-        <button onclick="location.href='./clock.html'">시계 보기</button>
-        <button>추가할것</button>
-        <button>추가할것2</button>
+      <div class="practice__wrapper">
+        <p>여기는 Js+Html+css를 연습하기 위한 공간입니다!</p>
+        <p>하나하나씩 추가할 예정이에요!</p>
+        <div class="btns">
+          <button onclick="location.href='./clock.html'">시계 보기</button>
+          <button>추가할것</button>
+          <button>추가할것2</button>
+        </div>
       </div>
     </section>
     <div class="custom-shape-divider-top-1654431782">
