시계 css 하기 전

--- a/clock.html
+++ b/clock.html
@@ -12,17 +12,21 @@
     <div class="gotoback" onclick="location.href='/'">뒤로가기</div>
     <section class="container">
       <h2>What Time is it?</h2>
-      <div class="button"></div>
       <div class="clock__analog__container">
         <div class="hour"></div>
         <div class="minute"></div>
         <div class="second"></div>
       </div>
-      <div class="clock__digital__container"></div>
+      <div class="clock__digital__container">
+        <div class="digital hours"></div>
+        <div class="digital minutes"></div>
+        <div class="digital seconds"></div>
+        <div class="digital ampm"></div>
+      </div>
     </section>
     <section class="btns">
-      <button>analog</button>
-      <button>digital</button>
+      <button class="analog">analog</button>
+      <button class="digital">digital</button>
     </section>
   </body>
 </html>
