시계 침 그림자 변경

--- a/clock.html
+++ b/clock.html
@@ -25,11 +25,12 @@
         <div class="digital seconds"></div>
         <div class="digital ampm"></div>
       </div>
+      <div class="btns">
+        <button class="analog">analog</button>
+        <button class="digital">digital</button>
+      </div>
     </section>
-    <section class="btns">
-      <button class="analog">analog</button>
-      <button class="digital">digital</button>
-    </section>
+
     <div class="custom-shape-divider-top-1654431782">
       <svg
         data-name="Layer 1"
