--- a/clock.html
+++ b/clock.html
@@ -26,8 +26,8 @@
         <div class="digital ampm"></div>
       </div>
       <div class="btns">
-        <button class="analog">analog</button>
-        <button class="digital">digital</button>
+        <button class="analog">ANALOG</button>
+        <button class="digital">DIGITAL</button>
       </div>
     </section>
 
