가위바위보 틀 만들기

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS PRAC</title>
+    <link rel="stylesheet" href="./common.css" />
     <link rel="stylesheet" href="./index.css" />
     <script defer src="./index.js"></script>
   </head>
@@ -16,7 +17,7 @@
         <p>하나하나씩 추가할 예정이에요!</p>
         <div class="btns">
           <button onclick="location.href='./clock.html'">시계 보기</button>
-          <button>추가할것</button>
+          <button onclick="location.href='./rocksp.html'">가위바위보!</button>
           <button>추가할것2</button>
         </div>
       </div>
