기능구현 완료 css제외

--- a/rocksp.html
+++ b/rocksp.html
@@ -19,8 +19,7 @@
   <body>
     <div class="gotoback" onclick="location.href='/'">뒤로가기</div>
     <section class="container">
-      <h2 class="game__name">가위바위보!</h2>
-      <h3 class="result__message">YOU WIN!</h3>
+      <h3 class="result__message"></h3>
       <div class="game__display">
         <div class="computer side">
           <div class="computer__score score"></div>
@@ -53,6 +52,7 @@
         </li>
       </ul>
       <button class="restart">다시하기</button>
+      <button class="initialization">점수초기화</button>
       <!-- <div style="display: none">
         <div class="test">
           <div class="test_1">
