--- a/clock.html
+++ b/clock.html
@@ -10,7 +10,7 @@
     <script defer src="./clock.js"></script>
   </head>
   <body>
-    <div class="gotoback" onclick="location.href='/'">뒤로가기</div>
+    <div class="gotoback" onclick="location.href='../'">뒤로가기</div>
     <section class="container">
       <h2 class="title">ALALOG CLOCK</h2>
       <div class="clock__analog__background">
