--- a/rocksp.html
+++ b/rocksp.html
@@ -17,7 +17,7 @@
     <script defer src="./rocksp.js"></script>
   </head>
   <body>
-    <div class="gotoback" onclick="location.href='/'">뒤로가기</div>
+    <div class="gotoback" onclick="location.href='../'">뒤로가기</div>
     <section class="container">
       <h3 class="result__message"></h3>
       <div class="game__display">
