뒤죽박죽 슬라이더

--- a/imgslider.html
+++ b/imgslider.html
@@ -16,10 +16,14 @@
   <body>
     <div class="container">
       <div class="img__wrapper">
-        <img class="img1" src="./forTest/해치컴배경_01_메롱달치.png" alt="" />
+        <img
+          class="img1 active"
+          src="./forTest/해치컴배경_01_메롱달치.png"
+          alt=""
+        />
         <img class="img2" src="./forTest/해치컴배경_02_꽃놀이.png" alt="" />
         <img
-          class="img3 active"
+          class="img3"
           src="./forTest/해치컴배경_04_중전마마와꿈속의경복궁.png"
           alt=""
         />
