기본 틀 완성

--- a/imgslider.html
+++ b/imgslider.html
@@ -15,20 +15,25 @@
   </head>
   <body>
     <div class="container">
+      <h2>Image Slider</h2>
       <div class="img__wrapper">
         <img
           class="img1 active"
           src="./forTest/해치컴배경_01_메롱달치.png"
           alt=""
         />
-        <img class="img2" src="./forTest/해치컴배경_02_꽃놀이.png" alt="" />
+        <img
+          class="img2 next"
+          src="./forTest/해치컴배경_02_꽃놀이.png"
+          alt=""
+        />
         <img
           class="img3"
           src="./forTest/해치컴배경_04_중전마마와꿈속의경복궁.png"
           alt=""
         />
         <img
-          class="img4"
+          class="img4 prev"
           src="./forTest/해치컴배경_04_중전마마와꿈속의경복궁.png"
           alt=""
         />
