--- a/imgslider.html
+++ b/imgslider.html
@@ -14,29 +14,14 @@
     <script defer src="./imgslider.js"></script>
   </head>
   <body>
+    <div class="gotoback" onclick="location.href='./index.html'">뒤로가기</div>
     <div class="container">
       <h2>Image Slider</h2>
       <div class="img__wrapper">
-        <img
-          class="img1 active"
-          src="./forTest/해치컴배경_01_메롱달치.png"
-          alt=""
-        />
-        <img
-          class="img2 next"
-          src="./forTest/해치컴배경_02_꽃놀이.png"
-          alt=""
-        />
-        <img
-          class="img3"
-          src="./forTest/해치컴배경_04_중전마마와꿈속의경복궁.png"
-          alt=""
-        />
-        <img
-          class="img4 prev"
-          src="./forTest/해치컴배경_04_중전마마와꿈속의경복궁.png"
-          alt=""
-        />
+        <img class="img1 active" src="./img/slider/haechi_01.png" alt="" />
+        <img class="img2 next" src="./img/slider/haechi_02.png" alt="" />
+        <img class="img3" src="./img/slider/haechi_03.png" alt="" />
+        <img class="img4 prev" src="./img/slider/haechi_04.png" alt="" />
       </div>
     </div>
     <div class="btns">
