--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <div class="btns">
           <button onclick="location.href='./clock.html'">시계 보기</button>
           <button onclick="location.href='./rocksp.html'">가위바위보!</button>
-          <button>추가할것2</button>
+          <button onclick="location.href='./imgslider.html'">
+            이미지 슬라이더
+          </button>
         </div>
       </div>
     </section>
