슬라이더 css 제외 만들음. 사소한 오류발생

--- a/imgslider.html
+++ b/imgslider.html
@@ -23,6 +23,12 @@
         <img class="img3" src="./img/slider/haechi_03.png" alt="" />
         <img class="img4 prev" src="./img/slider/haechi_04.png" alt="" />
       </div>
+      <div class="sliderCircle">
+        <div class="circle circle1 colored"></div>
+        <div class="circle circle2"></div>
+        <div class="circle circle3"></div>
+        <div class="circle circle4"></div>
+      </div>
     </div>
     <div class="btns">
       <button class="material-icons" id="prevBtn">navigate_before</button>
