메인화면 바꾸는중

--- a/index.html
+++ b/index.html
@@ -17,16 +17,20 @@
         <p>여기는 Js+Html+css를 연습하기 위한 공간입니다!</p>
         <p>하나하나씩 추가할 예정이에요!</p>
         <!-- 드롭다운 구현 -->
-        오늘은
-        <div class="dropdown__list">
-          <span class="main__thing">시계보기</span>
-          <ul class="prac__list">
-            <li onclick="location.href='./clock.html'">시계보기</li>
-            <li onclick="location.href='./rocksp.html'">가위바위보!</li>
-            <li onclick="location.href='./imgslider.html'">이미지 슬라이더</li>
-          </ul>
+        <div class="prac">
+          <div class="dropdown__list">
+            <span class="visible">연습한 것 중에 하나</span>
+            <ul class="prac__list">
+              <li onclick="location.href='./clock.html'">시계보기</li>
+              <li onclick="location.href='./rocksp.html'">가위바위보!</li>
+              <li onclick="location.href='./imgslider.html'">
+                이미지 슬라이더
+              </li>
+            </ul>
+          </div>
+          <!-- 라우터도할거임  -->
+          <span>보러가기!</span>
         </div>
-        보러가기!
       </div>
     </section>
     <div class="custom-shape-divider-top-1654431782">
