메인 드롭다운 내려가는거 구현

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
         <p>하나하나씩 추가할 예정이에요!</p>
         <!-- 드롭다운 구현 -->
         <div class="prac">
+          <span>지금까지</span>
           <div class="dropdown__list">
-            <span class="visible">연습한 것 중에 하나</span>
+            <span class="preview__ul"
+              >연습한 것 중에 하나
+              <span class="toggle"></span>
+            </span>
             <ul class="prac__list">
               <li onclick="location.href='./clock.html'">시계보기</li>
               <li onclick="location.href='./rocksp.html'">가위바위보!</li>
