--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="prac">
           <span>지금까지</span>
           <div class="dropdown__list">
-            <span class="preview__ul"
-              >연습한 것 중에 하나
+            <span class="preview__ul">
+              연습한 것 중에 하나
               <span class="toggle"></span>
             </span>
             <ul class="prac__list">
