--- a/imgslider.html
+++ b/imgslider.html
@@ -18,10 +18,22 @@
     <div class="container">
       <h2>Image Slider</h2>
       <div class="img__wrapper">
-        <img class="img1 active" src="./img/slider/haechi_01.png" alt="" />
-        <img class="img2 next" src="./img/slider/haechi_02.png" alt="" />
-        <img class="img3" src="./img/slider/haechi_03.png" alt="" />
-        <img class="img4 prev" src="./img/slider/haechi_04.png" alt="" />
+        <img
+          class="img1 active"
+          src="./img/slider/haechi_01.png"
+          alt="메롱해치1"
+        />
+        <img
+          class="img2 next"
+          src="./img/slider/haechi_02.png"
+          alt="메롱해치2"
+        />
+        <img class="img3" src="./img/slider/haechi_03.png" alt="메롱해치3" />
+        <img
+          class="img4 prev"
+          src="./img/slider/haechi_04.png"
+          alt="메롱해치4"
+        />
       </div>
       <div class="sliderCircle">
         <div class="circle circle1 colored"></div>
