슬라이더2 기본 완성

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="자바스크립트 능력 향상을 위해 연습하는 공간입니다"
+    />
+    <meta property="og:title" content="JS PRAC" />
+
     <title>JS PRAC</title>
     <link rel="shortcut icon" href="./icon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./common.css" />
@@ -29,6 +35,9 @@
               <li onclick="location.href='./rocksp.html'">가위바위보!</li>
               <li onclick="location.href='./imgslider.html'">
                 이미지 슬라이더
+              </li>
+              <li onclick="location.href='./imgslider2.html'">
+                이미지 슬라이더2
               </li>
             </ul>
           </div>
