--- a/imgslider.html
+++ b/imgslider.html
@@ -41,6 +41,10 @@
         <div class="circle circle3"></div>
         <div class="circle circle4"></div>
       </div>
+      <div class="playPause">
+        <button class="material-icons" id="play">play_arrow</button>
+        <button class="material-icons" id="pause">pause</button>
+      </div>
     </div>
     <div class="btns">
       <button class="material-icons" id="prevBtn">navigate_before</button>
