--- a/card.html
+++ b/card.html
@@ -15,5 +15,9 @@
   </head>
   <body>
     <div class="frame"></div>
+    <div class="btns">
+      <button class="material-icons" id="like">thumb_up</button>
+      <button class="material-icons" id="dislike">thumb_down</button>
+    </div>
   </body>
 </html>
