카드스와이퍼

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
               <li onclick="location.href='./imgslider2.html'">
                 이미지 슬라이더2
               </li>
+              <li onclick="location.href='./card.html'">카드 스와이퍼</li>
             </ul>
           </div>
           <!-- 라우터도할거임  -->
