--- a/card.html
+++ b/card.html
@@ -14,6 +14,10 @@
     <script defer src="./card.js"></script>
   </head>
   <body>
+    <div class="background">
+      <div class="likeBackground"></div>
+      <div class="dislikeBackground"></div>
+    </div>
     <div class="frame"></div>
     <div class="btns">
       <button class="material-icons" id="like">thumb_up</button>
