이미지슬라이더 터치로 구현

--- a/imgslider2.html
+++ b/imgslider2.html
@@ -18,12 +18,7 @@
     <div class="container">
       <h2>Image Slider</h2>
       <div class="img__visible">
-        <div class="img__wrapper">
-          <img class="img1" src="./img/slider/haechi_01.png" alt="메롱해치1" />
-          <img class="img2" src="./img/slider/haechi_02.png" alt="메롱해치2" />
-          <img class="img3" src="./img/slider/haechi_03.png" alt="메롱해치3" />
-          <img class="img4" src="./img/slider/haechi_04.png" alt="메롱해치4" />
-        </div>
+        <div class="img__wrapper"></div>
       </div>
       <div class="btns">
         <button class="material-icons" id="prevBtn">navigate_before</button>
