타이틀효과,imgslider2수정

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <section class="practice__wrapper">
-      <h2>JS Practice!</h2>
+      <h2 class="title">PRACTICE!</h2>
       <div>
         <p>여기는 Js+Html+css를 연습하기 위한 공간입니다!</p>
         <p>하나하나씩 추가할 예정이에요!</p>
