--- a/card.html
+++ b/card.html
@@ -14,6 +14,7 @@
     <script defer src="./card.js"></script>
   </head>
   <body>
+    <div class="gotoback" onclick="location.href='./index.html'">뒤로가기</div>
     <div class="background">
       <div class="likeBackground"></div>
       <div class="dislikeBackground"></div>
